Closed Bug 1917664 Opened 1 year ago Closed 1 year ago

Ensure mMSAuthorities is loaded even when the preference is switched

Categories

(Core :: Networking: HTTP, defect, P2)

defect

Tracking

()

RESOLVED FIXED
132 Branch
Tracking Status
firefox-esr128 --- fixed
firefox131 --- fixed
firefox132 --- fixed

People

(Reporter: sekim, Assigned: sekim)

References

(Blocks 1 open bug)

Details

(Whiteboard: [necko-triaged][necko-priority-queue])

Attachments

(3 files)

Due to !StaticPrefs::network_http_microsoft_entra_sso_enabled(), we don't set the mMSAuthorities if network.http.microsoft-entra-sso.enabled is not set. This is problematic as if user switches pref in between, mMSAuthorities would remain empty hence SSO would not work: https://searchfox.org/mozilla-central/rev/04a47c08504e6357a3164163dd19a47754521204/netwerk/protocol/http/nsHttpHandler.cpp#1080

Assignee: nobody → sekim
Severity: -- → S2
Priority: -- → P2
Whiteboard: [necko-triaged][necko-priority-queue]
Depends on: 1768724
Summary: Ensure mMSAuthorities is not empty even when the preference is not set → Ensure mMSAuthorities is loaded even when the preference is switched
Attachment #9423648 - Attachment description: Bug 1917664 - Ensure mMSAuthorities is not empty even when the preference is not set r=#necko → Bug 1917664 - Ensure mMSAuthorities is loaded even when the preference is switched r=#necko
Attachment #9423854 - Flags: approval-mozilla-beta?

beta Uplift Approval Request

  • User impact if declined: When the pref microsoft-entra-sso.enabled is set from false to true, Microsoft SSO won't be enabled until reopening the browser on macOS.
  • Code covered by automated testing: no
  • Fix verified in Nightly: no
  • Needs manual QE test: no
  • Steps to reproduce for manual QE testing: would be difficult to get QA setup (Microsoft Azure)
  • Risk associated with taking this patch: Low
  • Explanation of risk level: No risk, the component is isolated (can only be enabled by a pref
  • String changes made/needed: N/A
  • Is Android affected?: no
Attachment #9423854 - Flags: approval-mozilla-beta?
Pushed by sekim@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/dce83ca67c50 Ensure mMSAuthorities is loaded even when the preference is switched r=necko-reviewers,kershaw
Attachment #9423854 - Flags: approval-mozilla-beta?

beta Uplift Approval Request

  • User impact if declined: When the pref microsoft-entra-sso.enabled is set from false to true, Microsoft SSO won't be enabled until reopening the browser on macOS.
  • Code covered by automated testing: no
  • Fix verified in Nightly: no
  • Needs manual QE test: no
  • Steps to reproduce for manual QE testing: would be difficult to get QA setup (Microsoft Azure). Note that this was tested in a manual signed build.
  • Risk associated with taking this patch: Low
  • Explanation of risk level: No risk, the component is isolated (can only be enabled by a pref
  • String changes made/needed: N/A
  • Is Android affected?: no

beta Uplift Approval Request

  • User impact if declined: When the pref microsoft-entra-sso.enabled is set from false to true, Microsoft SSO won't be enabled until reopening the browser on macOS.
  • Code covered by automated testing: no
  • Fix verified in Nightly: no
  • Needs manual QE test: no
  • Steps to reproduce for manual QE testing: would be difficult to get QA setup (Microsoft Azure). Note that this was tested in a manual signed build (Nightly).
  • Risk associated with taking this patch: Low
  • Explanation of risk level: Low risk since the component is isolated (can only be enabled by a pref; the UI is hidden for now)
  • String changes made/needed: N/A
  • Is Android affected?: no
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 132 Branch
Attachment #9423854 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Attachment #9431598 - Flags: approval-mozilla-esr128?

esr128 Uplift Approval Request

  • User impact if declined: SSO feature doens't work until restart
  • Code covered by automated testing: no
  • Fix verified in Nightly: yes
  • Needs manual QE test: no
  • Steps to reproduce for manual QE testing: N/A
  • Risk associated with taking this patch: Low
  • Explanation of risk level: Only impacts SSO feature, has been tested by microsoft
  • String changes made/needed: None
  • Is Android affected?: no
Attachment #9431598 - Flags: approval-mozilla-esr128? → approval-mozilla-esr128+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: