Bug 1917664 - Ensure mMSAuthorities is loaded even when the preference is switched r=necko-reviewers,kershaw

Differential Revision: https://phabricator.services.mozilla.com/D221532